css/style.css
* {
    padding: 0;
    margin: 0;
}

:root {
    --gameboard-size: 30px;
    --gameboard-gap: 2px;
    --gameboard-cell-bg: #2059ff;
    --gameboard-cell-hover-lightness: 70;
    --bg: #3a5a40;
    --accent: #ffb800;
    --primary: #d36135;
    --secondary: #9c3848;
    --text: #ece4b7;
}

body {
    background: var(--bg);
    color: var(--text);
    padding: 10px 40px;
    font-family:
        system-ui,
        -apple-system,
        BlinkMacSystemFont,
        "Segoe UI",
        Roboto,
        Oxygen,
        Ubuntu,
        Cantarell,
        "Open Sans",
        "Helvetica Neue",
        sans-serif;
}

.container {
    display: grid;
    place-items: center;
    gap: 10px;
    font-weight: bold;
    color: #dad7cd;
}

.header {
    text-align: center;
    font-size: 2rem;
}

.gameboard-container {
    display: grid;
    width: 100%;
    grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
    place-content: center;
    gap: 16px;
}

.player-one-gameboard-container,
.player-two-gameboard-container {
    display: grid;
    gap: 5px;
    place-content: center;
    grid-template-areas:
        "gh gh"
        ". hc"
        "vc gb";
}

.player-one-gameboard-header,
.player-two-gameboard-header {
    font-size: 1.5rem;
    text-align: center;
}

.gameboard-header {
    grid-area: gh;
}

.horizontal-coordinates {
    display: grid;
    grid-template-columns: repeat(10, var(--gameboard-size));
    grid-template-rows: var(--gameboard-size);
    gap: var(--gameboard-gap);
    text-align: center;
    grid-area: hc;
}

.vertical-coordinates {
    display: grid;
    grid-template-rows: repeat(10, var(--gameboard-size));
    gap: var(--gameboard-gap);
    grid-area: vc;
}

.gameboard {
    display: grid;
    grid-auto-flow: column;
    grid-template-columns: repeat(10, var(--gameboard-size));
    grid-template-rows: repeat(10, var(--gameboard-size));
    gap: var(--gameboard-gap);
    grid-area: gb;
}

.cell {
    background-color: var(--gameboard-cell-bg);
}

.turn-to-receive-attack .cell:hover {
    background-color: hsl(
        from var(--gameboard-cell-bg) h s var(--gameboard-cell-hover-lightness)
    );
}

.turn-to-receive-attack .cell:active {
    background-color: hsl(from var(--gameboard-cell-bg) 20 s l);
}

/*use these only when you have to show the ships, maybe at the end of the game*/
.player-one-gameboard-container .cell.occupied {
    background-color: #222;
}

/*.cell.occupied:hover {*/
/*    background-color: hsl(from red h s var(--gameboard-cell-hover-lightness));*/
/*}*/

.cell.occupied.hit {
    background: #ff0000;
}

.cell.hit {
    background: hsl(from var(--gameboard-cell-bg) h s 90);
}

.winner-container-dialog {
    margin: auto;
    background: none;
    outline: none;
    border: 2px solid var(--accent);
    border-radius: 20px;
    background: var(--secondary);
    padding: 20px 80px;
}

.winner-container {
    display: grid;
    font-size: 2rem;
    font-weight: bold;
    color: var(--accent);
}

.dialog-buttons {
    display: grid;
    place-content: center;
}

button {
    outline: none;
    border: 2px solid var(--accent);
    border-radius: 4px;
    padding: 5px 20px;
    font-size: 1.2rem;
    font-weight: bold;
    background: var(--primary);
    color: var(--text);

    display: grid;
}

::backdrop {
    backdrop-filter: blur(1px);
}

input:invalid {
    border: 2px solid red;
}

input:valid {
    border: 2px solid green;
}

.error-message {
    color: var(--primary);
}

.config-toggler {
    display: grid;
    grid-auto-flow: column;
    place-content: center;
    gap: 8px;
}

